<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bathroom White Noise Generator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fan_switch">Fan</string>
    <string name="flush_switch">Flush</string>
    <string name="faucet_switch">Faucet</string>
    <string name="hand_dryer_switch">Hand Dryer</string>
    <string name="door_slam_switch">Door Slam</string>
    <string name="volume_seekBar">Volume</string>

</resources>
