<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fan_switch"
        android:id="@+id/fanSwitch"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/spacing_switches" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flush_switch"
        android:id="@+id/flushSwitch"
        android:layout_below="@+id/fanSwitch"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/spacing_switches" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faucet_switch"
        android:id="@+id/faucetSwitch"
        android:layout_below="@+id/flushSwitch"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/spacing_switches" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hand_dryer_switch"
        android:id="@+id/handDryerSwitch"
        android:layout_below="@+id/doorSlamSwitch"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/spacing_switches" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/door_slam_switch"
        android:id="@+id/doorSlamSwitch"
        android:layout_below="@+id/faucetSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_switches" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_seekBar"
        android:id="@+id/textView3"
        android:layout_above="@+id/volumeSeekBar"
        android:layout_alignParentLeft="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/volumeSeekBar"
        android:layout_marginBottom="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />




</RelativeLayout>
